確認画面の２つ目窓URL直打ち対応　画像関連だけうまくいかない

--- a/src/main/resources/templates/product/productlist.html
+++ b/src/main/resources/templates/product/productlist.html
@@ -52,7 +52,7 @@
         <td>
           <form
               th:action="@{/deleteproduct/confirm}"
-              method="post">
+              method="get">
               <input type="hidden" name="productId" th:value="${p.productId}">
               <button type="submit" class="btn btn-danger">削除</button>
           </form>
