--- a/src/main/resources/templates/product/register/confirm.html
+++ b/src/main/resources/templates/product/register/confirm.html
@@ -32,7 +32,7 @@
             </tr>
             <tr>
                 <td style="text-align:center;">画像</td>
-                <td style="text-align:left;"><img th:src="${image}" width="100"></td>
+                <td style="text-align:left;"><img th:src="${productForm.image}" width="100"></td>
             </tr>
         </table>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
