html action href修正

--- a/src/main/resources/templates/product/categoryregister/confirm.html
+++ b/src/main/resources/templates/product/categoryregister/confirm.html
@@ -21,8 +21,8 @@
         </table>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <form th:action="@{execute}" method="post">
-            <a href="/menu">キャンセル</a>
-            <a href="/registerproductcategory/input">戻る
+            <a href="/admin/menu">キャンセル</a>
+            <a href="/admin/registerproductcategory/input">戻る
             <input type="submit" value="完了">
         </form>
     </div>
