--- a/src/main/resources/templates/product/update/confirm.html
+++ b/src/main/resources/templates/product/update/confirm.html
@@ -42,7 +42,7 @@
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             <form th:action="@{execute}" method="post">
-            <a href="/productlist">キャンセル</a>
+            <a href="/admin/productlist">キャンセル</a>
             <a href="javascript:history.back()">戻る</a>
             <input type="submit" value="完了">
             </form>
