--- a/src/main/resources/templates/account/register/complete.html
+++ b/src/main/resources/templates/account/register/complete.html
@@ -14,7 +14,7 @@
         <table style="margin: 0 auto;">
             <tr>
                 <td style="text-align:center;">
-                    <form th:action="@{/logoutEmployee}" method="post">
+                    <form th:action="@{/admin/logoutEmployee}" method="post">
                         <input type="submit" value="業務終了">
                     </form>
                 </td>
