--- a/src/main/resources/templates/account/register/confirm.html
+++ b/src/main/resources/templates/account/register/confirm.html
@@ -31,7 +31,7 @@
         </table>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <form th:action="@{execute}" method="post">
-            <a href="/menu">キャンセル</a>
+            <a href="/admin/menu">キャンセル</a>
             <a href="javascript:history.back()">戻る</a>
             <input type="submit" value="完了">
         </form>
