--- a/src/main/resources/templates/account/register/input.html
+++ b/src/main/resources/templates/account/register/input.html
@@ -10,7 +10,7 @@
     <div th:replace="fragment::header"></div>
     <div>
         <h1>アカウント登録（入力）</h1>
-        <form th:action="@{/registeraccount/confirm}" method="post" th:object="${employeeForm}">
+        <form th:action="@{/admin/registeraccount/confirm}" method="post" th:object="${employeeForm}">
             <div class="error">
                 <p th:if="${#fields.hasErrors('global')}" th:each="error : ${#fields.errors('global')}" th:text="${error}">
                 </p>
@@ -45,7 +45,7 @@
             
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-            <a href="/menu">キャンセル</a>
+            <a href="/admin/menu">キャンセル</a>
             <input type="submit" value="確認">
             
         </form>
