--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -9,18 +9,18 @@
 
 <body>
     <div th:fragment="header" id="header">
-        <h3><a href="/menu">文具/雑貨販売システム</a></h3>
+        <h3><a href="/admin/menu">文具/雑貨販売システム</a></h3>
         <div th:if="${#authorization.expression('isAuthenticated()')}">
-            <form th:action="@{'/logoutEmployee'}" method="post">
-                <a href="/productlist">商品情報メンテナンス</a>
-                <a href="/registerproductcategory/input">商品カテゴリ登録</a>
+            <form th:action="@{'/admin/logoutEmployee'}" method="post">
+                <a href="/admin/productlist">商品情報メンテナンス</a>
+                <a href="/admin/registerproductcategory/input">商品カテゴリ登録</a>
                 <a href="#">購入履歴検索</a>
-                <a href="/registeraccount/input">アカウント登録</a>
+                <a href="/admin/registeraccount/input">アカウント登録</a>
                 <input type="submit" value="ログアウト">
             </form>
         </div>
         <div th:if="${not #authorization.expression('isAuthenticated()')}">
-            <a href="/loginEmployee">ログイン</a>
+            <a href="/admin/loginEmployee">ログイン</a>
         </div>
     </div>
 
