--- a/src/main/resources/templates/product/categoryregister/input.html
+++ b/src/main/resources/templates/product/categoryregister/input.html
@@ -10,7 +10,7 @@
     <div th:replace="fragment::header"></div>
     <div>
         <h1>商品カテゴリ登録（入力）</h1>
-        <form th:action="@{/registerproductcategory/confirm}" method="post" th:object="${categoryForm}">
+        <form th:action="@{/admin/registerproductcategory/confirm}" method="post" th:object="${categoryForm}">
                 <div class="error">
                     <p th:if="${#fields.hasErrors('global')}" th:each="error : ${#fields.errors('global')}" th:text="${error}">
                     </p>
@@ -27,7 +27,7 @@
                 </tr>
             </table>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-            <a href="/menu">キャンセル</a>
+            <a href="/admin/menu">キャンセル</a>
             <input type="submit" value="確認">
         </form>
         <div th:if="${errorMessage}" th:text="${errorMessage}" style="color:red;"></div>
