--- a/src/main/resources/templates/product/delete/complete.html
+++ b/src/main/resources/templates/product/delete/complete.html
@@ -14,12 +14,12 @@
         <table style="margin: 0 auto;">
             <tr>
                 <td style="text-align:center;">
-                    <form th:action="@{/menu}" method="get">
+                    <form th:action="@{/admin/menu}" method="get">
                         <input type="submit" value="業務終了">
                     </form>
                 </td>
                 <td style="text-align:center;">
-                    <form th:action="@{/productlist}" method="get">
+                    <form th:action="@{/admin/productlist}" method="get">
                         <input type="submit" value="商品検索へ戻る">
                     </form>
                 </td>
