--- a/src/main/resources/templates/product/register/input.html
+++ b/src/main/resources/templates/product/register/input.html
@@ -11,7 +11,7 @@
     <div>
         <h1>新商品登録（入力）</h1>
         
-        <form th:action="@{/registerproduct/confirm}" method="post" th:object="${productForm}" enctype="multipart/form-data">
+        <form th:action="@{/admin/registerproduct/confirm}" method="post" th:object="${productForm}" enctype="multipart/form-data">
             <div class="error">
                 <p th:each="error : ${#fields.errors('global')}" th:text="${error}"></p>
             </div>
@@ -60,7 +60,7 @@
             </table>
             
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-            <a href="/productlist">キャンセル</a>
+            <a href="/admin/productlist">キャンセル</a>
             <input type="submit" value="確認">
             
         </form>
