--- a/src/main/resources/templates/product/update/complete.html
+++ b/src/main/resources/templates/product/update/complete.html
@@ -15,12 +15,12 @@
         <table style="margin: 0 auto;">
             <tr>
                 <td style="text-align:center;">
-                    <form th:action="@{/logoutEmployee}" method="post">
+                    <form th:action="@{/admin/logoutEmployee}" method="post">
                         <input type="submit" value="業務終了">
                     </form>
                 </td>
                 <td style="text-align:center;">
-                    <form th:action="@{/productlist}" method="get">
+                    <form th:action="@{/admin/productlist}" method="get">
                         <input type="submit" value="商品検索へ戻る">
                     </form>
                 </td>
