バックエンド完成形

--- a/src/main/resources/templates/product/update/confirm.html
+++ b/src/main/resources/templates/product/update/confirm.html
@@ -46,5 +46,6 @@
             <a href="javascript:history.back()">戻る</a>
             <input type="submit" value="完了">
             </form>
+            <div th:replace="fragment::footer"></div>
 </body>
 </html>
