--- a/src/main/resources/templates/product/update/complete.html
+++ b/src/main/resources/templates/product/update/complete.html
@@ -15,7 +15,7 @@
         <table style="margin: 0 auto;">
             <tr>
                 <td style="text-align:center;">
-                    <form th:action="@{/admin/logoutEmployee}" method="post">
+                    <form th:action="@{/admin/logout}" method="post">
                         <input type="submit" value="業務終了">
                     </form>
                 </td>
