--- a/src/main/resources/templates/loginCustomer.html
+++ b/src/main/resources/templates/loginCustomer.html
@@ -8,22 +8,22 @@
 
 </head>
 <body>
-    <div th:replace="fragment::header"></div>
+    <div th:replace="fragmentC::headerC"></div>
 
     <div>
         <h1>ログイン</h1>
         <div th:if="${session['SPRING_SECURITY_LAST_EXCEPTION'] != null}" class="error">
             <span th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}"></span>
         </div>
-        <form th:action="@{/admin/auth}" method="post">
+        <form th:action="@{/customer/auth}" method="post">
              <table  style="margin: 0 auto;">
                 <tr>
-                    <td style="text-align:right;">アカウント名</td>
-                    <td style="text-align:left;"><input type="text" name="username"></td>
+                    <td style="text-align:right;">メールアドレス</td>
+                    <td style="text-align:left;"><input type="text" name="mailAddress" placeholder="メールアドレス"></td>
                 </tr>
                 <tr>
                     <td style="text-align:right;">パスワード</td>
-                    <td style="text-align:left;"><input type="password" name="password"></td>
+                    <td style="text-align:left;"><input type="password" name="password" placeholder="パスワード"></td>
                 </tr>
             </table>
             <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/> -->
@@ -31,6 +31,6 @@
         </form>
     </div>
     
-    <div th:replace="fragment::footer"></div>
+    <div th:replace="fragmentC::footerC"></div>
 </body>
 </html>
