searchのスペルミス変更

--- a/src/main/resources/templates/fragmentC.html
+++ b/src/main/resources/templates/fragmentC.html
@@ -48,7 +48,7 @@
                     <li><a href="/customer/top" style="color: white; text-decoration: none;">トップ</a></li>
                     <li><a href="/customer/registeraccount" style="color: white; text-decoration: none;">アカウント登録</a></li>
                     <li><a href="/customer/login" style="color: white; text-decoration: none;">ログイン</a></li>
-                    <li><a href="/customer/serchproduct" style="color: white; text-decoration: none;">商品検索</a></li>
+                    <li><a href="/customer/searchproduct" style="color: white; text-decoration: none;">商品検索</a></li>
                 </ul>
             </div>
             <!-- 右側部分 -->
