--- a/src/main/resources/templates/frontproductlist.html
+++ b/src/main/resources/templates/frontproductlist.html
@@ -119,7 +119,7 @@
   <div>
     <h1> カテゴリ別商品検索画面 </h1>
     <table class="body">
-      <form th:action="@{/searchproduct}" method="get">
+      <form th:action="@{/customer/searchproduct}" method="get">
         <td class="padding">
             商品検索
         </td>
