--- a/src/main/resources/templates/productDetails.html
+++ b/src/main/resources/templates/productDetails.html
@@ -49,7 +49,7 @@ table.container td {
   <div th:replace="fragmentC::headerC"></div>
 
   <div>
-    <p><span th:text="${product.name}"></span></p>
+    <p><span th:text="${product.productName}"></span></p>
 
 <div class="table-container">
 <table class="container">
@@ -82,7 +82,7 @@ table.container td {
     </tr>
 
 
-    <p><span th:text="${product.prouctStock().quantity}"></span></p>
+    <p><span th:text="${product.productStock.quantity}"></span></p>
 </table>
 </div>
 
