controller ファイル名変更

--- a/src/main/resources/templates/fragmentC.html
+++ b/src/main/resources/templates/fragmentC.html
@@ -32,7 +32,7 @@
                     <a href="/customer/login" style="color: white;">ログイン</a>
                 </div>
                 <div th:if="${#authorization.expression('hasAuthority(''CUSTOMER'')')}">
-                    <a href="#" style="color: rgb(224, 217, 217); margin-right: 10px;">購入履歴</a>
+                    <a href="/customer/history/list" style="color: rgb(224, 217, 217); margin-right: 10px;">購入履歴</a>
                     <a href="/customer/logout" style="color: white;" th:text="'ログアウト (' + ${(#authentication.principal instanceof T(com.fullness.ec.security.CustomerUserDetails) ? #authentication.principal.customerName : '')} + 'さま)'"></a>
                 </div>
             </div>
