--- a/src/main/resources/templates/order/history/purchaselist.html
+++ b/src/main/resources/templates/order/history/purchaselist.html
@@ -29,7 +29,7 @@
               th:action="@{/customer/history/detail}"
               method="post">
               <input type="hidden" name="orderId" th:value="${order.orderId}">
-              <button type="submit" class="btn btn-warning">詳細</button>
+              <button type="submit" class="btn btn-warning" style="color: white; background-color: #007bff;border: 2px solid transparent;border-radius: 5px;">詳細</button>
           </form>
         </td>       
       </tr>
