--- a/src/main/resources/templates/productDetails.html
+++ b/src/main/resources/templates/productDetails.html
@@ -7,6 +7,57 @@
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <style>
+    /* .container{
+        position: relative;
+        top: -150px;
+        left: 1100px;
+    }  */
+  
+
+    .container{
+        position: absolute;
+            top: 60px;
+            right: 50px;
+            border: 5px solid rgb(61, 45, 47); /* テーブルの可愛い枠線 */
+            border-radius: 15px; /* 角を丸くする */
+            padding: 20px; /* 内側の余白を追加 */
+            width: 25%; 
+            height: 80px; 
+    }
+    .image-size{
+        width: 200px;
+      height: 200px;
+    }
+    .left{
+        margin-left: 100px;
+    }
+    .center{
+        margin-left: 300px;
+    }
+
+    .cute-font {
+            font-family: "MS Pゴシック",sans-serif;
+            font-size: 24px; /* フォントサイズを大きく */
+            color: #1f191c; 
+        }
+    
+       
+        .large-select {
+            width: 200px; /* プルダウンの幅を大きく */
+            height: 30px; /* プルダウンの高さを大きく */
+        }
+        .cart{
+            width: 200px; /* プルダウンの幅を大きく */
+            height: 30px; /* プルダウンの高さを大きく */
+
+        }
+        .align-left {
+        text-align: left; /* テーブルセル内で左寄せ */
+    }
+    .left-text {
+        text-align: left; /* テーブルセル内で左寄せ */
+    }
+        
 
 
 </style>
@@ -15,27 +66,26 @@
 
   <div th:replace="fragmentC::headerC"></div>
 
-  <div>
-    <p><span th:text="${product.productName}"></span></p>
-
-    <img th:src="@{/img/__${product.imageUrl}__}"  class="image-size">
-
+  <table class="left">
+    <tr><td><h2><span th:text="${product.productName}"></span></h2></td></tr>
+  </table>
+  <table class="center">
+    <tr><td><img th:src="@{/img/__${product.imageUrl}__}"  class="image-size" ></td></tr>
+ </table>
 <div class="table-container">
 <table class="container">
-   <tr> 
+   <tr class="left-text"> 
         <td>
-            <p><span th:text="${product.price}"></span></p>円
+            <p class="cute-font"><span th:text="${product.price}"></span>円</p>
         </td>
     </tr>
+    
+    
+    
     <tr>
-        <td>
-            数量
-        </td>
-    </tr>
-   
-    <tr>
-        <td>
-            <select id = "quantities" name="quantity">
+        <td><p class="align-left">数量</p><br>
+            <select id = "quantities" name="quantity"  class="large-select">
+               
                 <option th:each="num : ${quantities}"
                     th:value="${num}"
                     th:text="${num}"
@@ -46,7 +96,7 @@
     </tr>
     <tr>
         <td>
-            <input type="submit" value="カートに入れる">
+            <input type="submit" class="cart" value="カートに入れる">
         </td>
     </tr>
 
