--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -15,7 +15,7 @@
             <form th:action="@{'/admin/logout'}" method="post">
                 <a href="/admin/productlist">商品情報メンテナンス</a>
                 <a href="/admin/registerproductcategory/input">商品カテゴリ登録</a>
-                <a href="#">購入履歴検索</a>
+                <a href="/admin/history">購入履歴検索</a>
                 <a href="/admin/registeraccount/input">アカウント登録</a>
                 <input type="submit" value="ログアウト">
             </form>
